--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@react-spring/web": "^9.7.5",
     "autoprefixer": "^10.4.7",
     "custom-cursor-react": "^1.0.5",
+    "framer-motion": "^12.10.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
     "next": "12.1.6",
@@ -25,6 +27,7 @@
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
+    "react-tinder-card": "^1.6.4",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "styled-components": "^5.3.5",
