--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-spring/web": "^9.7.5",
     "autoprefixer": "^10.4.7",
     "custom-cursor-react": "^1.0.5",
@@ -31,6 +33,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "styled-components": "^5.3.5",
+    "swiper": "^11.2.6",
     "tailwindcss": "^3.0.24",
     "uuid": "^8.3.2"
   },
